--- a/الوثائق/المعايير/051622/051622.md
+++ b/الوثائق/المعايير/051622/051622.md
@@ -1,12 +1,12 @@
 ---
 title: "المعيار رقم 051622"
 date: '2022/05/16'
-desc: 'المعيار الخاص بشكل اللغة وبالمتغيرات والدوال'
+desc: 'المعيار الخاص بالمقارنة وبالمتغيرات والدوال'
 draft: false
 tags: ["الدوال", "المتغيرات", "المقارنة"]
 ---
 
-# ملف المعايير نسخة 051622 الخاص بلغة البرمجة العربية ألف
+# معيار رقم 051622 الخاص بلغة البرمجة العربية ألف
 
 <center>
 <img alt="شعار لغة ألف" src="https://avatars.githubusercontent.com/alifcommunity" />
@@ -14,7 +14,7 @@ tags: ["الدوال", "المتغيرات", "المقارنة"]
 
 ---
 
-## تعريف
+## تعريف بلغة ألف
 لغة ألف (**حرف أ**) هي لغة برمجة عربية مفتوحة المصدر كائنية، مصرفة، عالية المستوى، صممت من طرف **حسن دراكة** في كندا سنة 2018، وهي متاحة للعامة تحت رخصة جنو العمومية الاصدار الثالث.
 
 
@@ -65,7 +65,7 @@ tags: ["الدوال", "المتغيرات", "المقارنة"]
 تحدثنا في الفقرات السابقة على أن منهج لغة ألف هو جعل الشيفرة بسيطة وسهلة قدر الامكان، بحيث نجعل المبرمج يركز على فهم المشكلة وحلها (**البرنامج**) اكثر من فهم اللغة نفسها (**لغة ألف**)، لهذا المتغيرات في لغة ألف هي عبارة عن كائن، نفس الشكل المتبع في لغات مثل بايثون وجافاسكربت وPHP. **لكن بقوانين PHP فقط**
 
 ### **مثال**
-#### **لغة جافاسكربت - النتيجة: النص 12**
+#### **لغة جافاسكربت - النتيجة: نص 12**
 
 ```js
 let a = 1;
@@ -83,7 +83,7 @@ c = a + b # خطأ
 print(c)
 ```
 
-#### **لغة PHP - النتيجة: العدد 3**
+#### **لغة PHP - النتيجة: عدد 3**
 ```php
 $a = 1;
 $b = "2";
@@ -91,7 +91,7 @@ $c = $a + $b;
 echo ($c) // 3
 ```
 
-#### **لغة ألف - النتيجة: العدد 3**
+#### **لغة ألف - النتيجة: عدد 3**
 <div dir="rtl">
 
 ```ألف
