اضافة حروف منسية

--- a/alif_standards/المعايير/052322.md
+++ b/alif_standards/المعايير/052322.md
@@ -16,10 +16,10 @@ tags: ["رمز التخطي", "التعليقات الوصفية", "التعلي
 <div dir="rtl">
 
 ## مقدمة
-بسم الله الرحمن الرحيم، اولا التعليقات نوعين تعليقات يتم تجالها من قبل المترجم وتعليقات وصفيه وهي التي تكون وصف لشيء في الشيفرة الخاصة بك
+بسم الله الرحمن الرحيم، اولا التعليقات نوعين تعليقات يتم تجاهلها من قبل المترجم وتعليقات وصفيه وهي التي تكون وصف لشيء في الشيفرة الخاصة بك
 
 ## التعليقات
-في ألف٤ يمكنك كتابة تعليق لقارئ الشيفرة (يتم تجاله من قبل المترجم) بسطر وبأكثر من سطر
+في ألف٤ يمكنك كتابة تعليق لقارئ الشيفرة (يتم تجاهله من قبل المترجم) بسطر وبأكثر من سطر
 
 ### التعليق السطري
 التعليق السطري في ألف٤ هي علامة الهاشتاق `#` حيث تمكنك من تعليق سطر من بدايته او نهايته
