✍: الاضافة الى المعيار رقم `051622`

--- a/alif_standards/المعايير/051622.md
+++ b/alif_standards/المعايير/051622.md
@@ -90,21 +90,73 @@ $c = $a + $b;
 echo ($c) // 3
 ```
 
-#### **لغة ألف - النتيجة: عدد 3**
+#### **لغة ألف٤ - النتيجة: عدد 3**
 <div dir="rtl">
 
-```ألف
-متغير أ = 1
-متغير ب = "2"
-متغير ت = أ + ب
-اطبع(ت)
+```ألف٤
+أ = 1
+ب = "2"
+ت = أ + ب
+اطبع(ت) # 3
+```
+
+يمكن تقسيم المتغيرات في ألف٤ الى نوعين متكيف، وغير متكيف
+
+### المتغير المتكيف
+المتغير المتكيف في ألف٤ هو متغير يمكن تغير النوع الخاص به او بمعنى اخر انت تسمح للمترجم بتغير نوعه، ولكي تجعل المتغير متكيف، كل ماعليك هو عدم تحديد نوعه
+
+#### مثال
+```ألف٤
+أ = 1
+أ = "2" # يمكنك تغير نوعه
+```
+
+### متغير غير متكيف
+المتغير الغير متكييف في ألف٤ هو متغير يمكنك تغير قيمته لكن لايمكنك تغير نوعه، وطريقة تعريف متغير غير متكيف هي بتحديد النوع الخاص به
+
+#### مثال
+```ألف٤
+عدد أ = 1
+أ = "2" # خطأ لايمكنك تغير نوعه
+نص أ = "2" # يمكنك تغير نوعه بتحديد النوع الجديد
+```
+
+## الدوال
+> تنويه: يمكنك مراجعة التعليقات في المعيار رقم [052322](052322.md)
+### **الشكل والقوانين**
+تٌعرَّف الدوال باستخدام الكلمة المفتاحية **`دالة`**، يتبعها نوع القيمة التي ترجعها الدالة، ولا يتم تحديد النوع المخرج من الدالة اذا كانت لاتخرج شي وسوف ترجع لك قيمة بنوع **`عادم`** (**أي لا قيمة لها**).
+ويتم وضع اقواس الدالة بعد اسمها وبعدها نقطتان رأسيتان
+
+### محتوى الدالة
+
+يتم كتابة محتوى الدالة تحت الدالة بتاب واحد او اربع مسافات ( ولايسمح بكتابة كود يحتوي الاثنين)، ويتم ارجاع قيمة من الدالة عبر الكلمة المفتاحية **`أرجع`**
+
+### اقواس الدالة
+يتم تحديد المعطيات التي تستقبلها الدالة داخل الاقواس الخاصة بها، ويجب عليك تحديد نوع المعطى الذي تستقبله الدالة، ويمكنك وضع قيمة افترضية ان أردت
+
+### تحديد نوع المعطى
+يتم تحديد نوع معطى الدالة في ألف٤ بكتابة النوع ويليه اسم المعطى، ويتم الفصل بين المتغير والاخر بالفاصلة **`،`**
+
+### قيمة افتراضية للمعطى
+يمكنك تحديد قيمة افتراضية للمعطى باسنادها اليه كما هو موضح بالامثلة
+
+#### مثال
+```ألف٤
+""" دالة لاترجع شي، اي انها سوف ترجع نوع "عادم" """
+دالة سلّم():
+    اطبع("السلام عليكم") # لايتم ارجاع شي ( بمعنى سوف ترجع الدالة "عادم" (أي لا قيمة لها)
+
+""" دالة ترجع عدد ولاتستقبل معطيات """
+دالة عدد ارجاع_عدد():
+    أرجع 4
+
+""" دالة ترجع مجموع عددين يتم تمريرهم لها """
+دالة عدد جمع_عددين(عدد الرقم_الاول، عدد الرقم_الثاني):
+    أرجع الرقم_الاول + الرقم_الثاني
+
+""" دالة ترجع مجموع عددين يتم تمريرهم لها مع قيمة افتراضية """
+دالة عدد جمع_عددين(عدد الرقم_الاول، عدد الرقم_الثاني = 10):
+    أرجع الرقم_الاول + الرقم_الثاني
 ```
 
 </div>
-
-
-كما نلاحظ **قوانين لغة ألف تشبه قوانين لغة PHP في ما يتعلق بالمتغيرات**، لكن الشكل يشبه بايثون الى حد ما.
-
-## الدوال
-### **الشكل والقوانين**
-تٌعرَّف الدوال باستخدام الكلمة المفتاحية **`دالة`**، يتبعها اسم الدالة اذا كانت الدالة من نوع **`عادم`** (**أي أنها لا ترجع اي قيمة**) مثال **`دالة الحساب()`**، او تٌعرَّف باستخدام الكلمة المفتاحية **`دالة`** ويتبعها الكلمة المفتاحية **`متغير`** (**أي انها ترجع قيمة متغير**)، مثال **`دالة متغير الحساب()`**
