✍: تعديل اخطأ املائية

--- a/alif_standards/المعايير/052322.md
+++ b/alif_standards/المعايير/052322.md
@@ -5,6 +5,8 @@ desc: 'معيار يوضح التعامل مع التعليقات في ألف٤ 
 tags: ["رمز التخطي", "التعليقات الوصفية", "التعليقات"]
 ---
 
+<div dir="rtl">
+
 # معيار رقم 052322 الخاص بلغة البرمجة العربية ألف
 
 <center>
@@ -13,7 +15,6 @@ tags: ["رمز التخطي", "التعليقات الوصفية", "التعلي
 
 ---
 
-<div dir="rtl">
 
 ## مقدمة
 بسم الله الرحمن الرحيم، اولا التعليقات نوعين تعليقات يتم تجاهلها من قبل المترجم وتعليقات وصفيه وهي التي تكون وصف لشيء في الشيفرة الخاصة بك
@@ -29,7 +30,7 @@ tags: ["رمز التخطي", "التعليقات الوصفية", "التعلي
 
 ```ألف٤
 # سوف يتم تجاهل هذا السطر بالكامل
-ترحيب = "السلام عليكم" # سوف يتم تجاهل مابعدها 
+ترحيب = "السلام عليكم" # سوف يتم تجاهل مابعدها
 ```
 
 كما هو واضح في المثال تم التعليق بطريقتين الاولى هي تعليق سطر كامل، وسوف يتم تجاهله بالكامل من قبل المترجم.
@@ -44,7 +45,7 @@ tags: ["رمز التخطي", "التعليقات الوصفية", "التعلي
 ```ألف٤
 # سوف يتم تجاهل هذا السطر بالكامل
 # وهذا السطر
-# وهذا ايضآ ):
+# وهذا ايضآ (:
 ترحيب = "السلام عليكم"
 ```
 
@@ -70,13 +71,14 @@ tags: ["رمز التخطي", "التعليقات الوصفية", "التعلي
 
 ```ألف٤
 """
-يتم في هذي الدالة طباعة نص يحتوي علامة تنصيص
+يتم في هذه الدالة طباعة نص يحتوي علامة تنصيص
 """
 دالة اطبع_علامة_تنصيص()
-    اطبع("نص /"داخل علامة تنصيص/" نص خارجها") 
-    
+    اطبع("نص /"داخل علامة تنصيص/" نص خارجها")
+
     # المخرج:
     #    نص "داخل علامة تنصيص" نص خارجها
-نهاية الدالة
+نهاية دالة
 ```
+
 <div>
