--- a/alif_standards/المعايير/051622.md
+++ b/alif_standards/المعايير/051622.md
@@ -15,12 +15,12 @@ tags: ["الدوال", "المتغيرات", "المقارنة"]
 
 ---
 
-## تعريف بلغة ألف
-لغة ألف (**حرف أ**) هي لغة برمجة عربية مفتوحة المصدر كائنية، مصرفة، عالية المستوى، صممت من طرف **حسن دراكة** في كندا سنة 2018، وهي متاحة للعامة تحت رخصة جنو العمومية الاصدار الثالث.
+## تعريف بلغة ألف4
+لغة ألف (**تلفظ ألف كما الحرف الأبجدي الأول بالعربية**) هي لغة برمجة عربية مفتوحة المصدر كائنية، مصرفة، عالية المستوى، وهي متاحة كبرمجية مفتوحة المصدر بترخيص [جنو العمومي الاصدار الثالث](https://www.gnu.org/licenses/gpl-3.0.en.html).
 
 
 ## المنهج العام
-لغة ألف صممت بشكل تجعل المبرمج يركز على فهم المشكلة وحلها (**البرنامج**) أكثر من  فهم اللغة نفسها (**لغة ألف**). و من اجل تحقيق هذا الهدف يجب علينا تصميم لغة ألف بشكل يكون بسبط للغاية وغير معقد.
+لغة ألف صممت بشكل تجعل المبرمج يركز على فهم المشكلة وحلها (**البرنامج**) أكثر من  فهم اللغة نفسها (**لغة ألف**). و من اجل تحقيق هذا الهدف يجب علينا تصميم لغة ألف بشكل يكون بسبط للغاية وغير معقد، لذالك تم الاعتماد على لغة lua كمرجع للمعاير (**لغة الف4 ليست تعريب للغة lua**).
 
 
 ## الشكل العام
@@ -59,7 +59,7 @@ tags: ["الدوال", "المتغيرات", "المقارنة"]
 
 ## المتغيرات
 ### **الشكل والقوانين**
-تحدثنا في الفقرات السابقة على أن منهج لغة ألف هو جعل الشيفرة بسيطة وسهلة قدر الامكان، بحيث نجعل المبرمج يركز على فهم المشكلة وحلها (**البرنامج**) اكثر من فهم اللغة نفسها (**لغة ألف**)، لهذا المتغيرات في لغة ألف هي عبارة عن كائن، نفس الشكل المتبع في لغات مثل بايثون وجافاسكربت وPHP. **لكن بقوانين PHP فقط**
+تحدثنا في الفقرات السابقة على أن منهج لغة ألف هو جعل الشيفرة بسيطة وسهلة قدر الامكان، بحيث نجعل المبرمج يركز على فهم المشكلة وحلها (**البرنامج**) اكثر من فهم اللغة نفسها (**لغة ألف**)، لهذا المتغيرات في لغة ألف هي عبارة عن كائن، نفس الشكل المتبع في لغات مثل بايثون وجافاسكربت وPHP. **لكن بقوانين لغة lua**
 
 ### **مثال**
 #### **لغة جافاسكربت - النتيجة: نص 12**
@@ -99,31 +99,31 @@ echo ($c) // 3
 ```
 </div>
 
-#### **لغة ألف٤ - النتيجة: عدد 3**
+#### **لغة ألف4 - النتيجة: عدد 3**
 
-```ألف٤
+```ألف4
 أ = 1
 ب = "2"
 ت = أ + ب
 اطبع(ت) # 3
 ```
 
-يمكن تقسيم المتغيرات في ألف٤ الى نوعين متكيف، وغير متكيف
+يمكن تقسيم المتغيرات في ألف4 الى نوعين متكيف، وغير متكيف
 
 ### المتغير المتكيف
-المتغير المتكيف في ألف٤ هو متغير يمكن تغيير النوع الخاص به او بمعنى اخر انت تسمح للمترجم بتغير نوعه، ولكي تجعل المتغير متكيف، كل ماعليك هو عدم تحديد نوعه
+المتغير المتكيف في ألف4 هو متغير يمكن تغيير النوع الخاص به او بمعنى اخر انت تسمح للمترجم بتغير نوعه، ولكي تجعل المتغير متكيف، كل ماعليك هو عدم تحديد نوعه
 
 #### مثال
-```ألف٤
+```ألف4
 أ = 1
 أ = "2" # يمكنك تغير نوعه
 ```
 
 ### متغير غير متكيف
-المتغير الغير متكيف في ألف٤ هو متغيير يمكنك تغير قيمته لكن لايمكنك تغير نوعه، وطريقة تعريف متغير غير متكيف هي بتحديد النوع الخاص به
+المتغير الغير متكيف في ألف4 هو متغيير يمكنك تغير قيمته لكن لايمكنك تغير نوعه، وطريقة تعريف متغير غير متكيف هي بتحديد النوع الخاص به
 
 #### مثال
-```ألف٤
+```ألف4
 عدد أ = 1
 أ = "2" # خطأ لايمكنك تغير نوعه
 نص أ = "2" # يمكنك تغير نوعه بتحديد النوع الجديد
@@ -137,19 +137,19 @@ echo ($c) // 3
 
 ### محتوى الدالة
 
-بتم كتابة محتوى الدالة بعد النقطتان الرأسيتان **`:`** حتى **`نهاية دالة`** ويتم ارجاع قيمة من الدالة عبر الكلمة المفتاحية **`أرجع`**
+بتم كتابة محتوى الدالة بعد النقطتان الرأسيتان **`:`** حتى **`نهاية دالة`** ويتم ارجاع قيمة من الدالة عبر الكلمة المفتاحية **`ارجع`**
 
 ### اقواس الدالة
 يتم تحديد المعطيات التي تستقبلها الدالة داخل الاقواس الخاصة بها، ويجب عليك تحديد نوع المعطى الذي تستقبله الدالة، ويمكنك وضع قيمة افترضية ان أردت
 
 ### تحديد نوع المعطى
-يتم تحديد نوع معطى الدالة في ألف٤ بكتابة النوع ويليه اسم المعطى، ويتم الفصل بين المتغير والاخر بالفاصلة **`،`**
+يتم تحديد نوع معطى الدالة في ألف4 بكتابة النوع ويليه اسم المعطى، ويتم الفصل بين المتغير والاخر بالفاصلة **`،`**
 
 ### قيمة افتراضية للمعطى
 يمكنك تحديد قيمة افتراضية للمعطى باسنادها اليه كما هو موضح بالامثلة
 
 #### مثال
-```ألف٤
+```ألف4
 """ دالة لاترجع شي، اي انها سوف ترجع نوع "عادم" """
 دالة سلّم():
     اطبع("السلام عليكم") # لايتم ارجاع شي ( بمعنى سوف ترجع الدالة "عادم" (أي لا قيمة لها)
