--- a/alif_standards/المعايير/052322.md
+++ b/alif_standards/المعايير/052322.md
@@ -37,7 +37,7 @@ tags: ["رمز التخطي", "التعليقات الوصفية", "التعلي
 <br>اما بالنسبة للطريقة للثانية هي تعليق في نهاية السطر، سوف يترجم المترجم ماقبل علامة الهاشتاق `#` وسوف يتجاهل مابعدها
 
 ### تعليق متعدد الاسطر
-في ألف٤ لايوجد تعليق متعدد الاسطر صريح، حيث يكنك تعليق كل سطر بتعليق سطري، ويمكنك ايضآ استخدام [التعليق الوصفي](#التعليق-الوصفي)
+في ألف٤ لايوجد تعليق متعدد الاسطر صريح، حيث يمكنك تعليق كل سطر بتعليق سطري، ويمكنك ايضآ استخدام [التعليق الوصفي](#التعليق-الوصفي)
 
 #### مثال
 تعليق اكثر من سطر
