اصلاح تكرار المواضيع هذا يصلح التكرار بدون التعارض, التعارض لازال موجود

--- a/alif_standards/المعايير/051622.md
+++ b/alif_standards/المعايير/051622.md
@@ -15,13 +15,11 @@ tags: ["الدوال", "المتغيرات", "المقارنة"]
 
 ---
 
-## تعريف بلغة ألف4
-لغة ألف (**تلفظ ألف كما الحرف الأبجدي الأول بالعربية**) هي لغة برمجة عربية مفتوحة المصدر كائنية، مصرفة، عالية المستوى، وهي متاحة كبرمجية مفتوحة المصدر بترخيص [جنو العمومي الاصدار الثالث](https://www.gnu.org/licenses/gpl-3.0.en.html).
-
+## تعريف بلغة ألف
+لغة ألف (**حرف أ**) هي لغة برمجة عربية مفتوحة المصدر كائنية، مصرفة، عالية المستوى، أسسها **حسن دراكة** في كندا سنة 2018، وحاليا يثم تطويرها من طرف **مجتمع ألف**، وهي متاحة للعامة تحت رخصة جنو العمومية الاصدار الثالث.
 
 ## المنهج العام
-لغة ألف صممت بشكل تجعل المبرمج يركز على فهم المشكلة وحلها (**البرنامج**) أكثر من  فهم اللغة نفسها (**لغة ألف**). و من اجل تحقيق هذا الهدف يجب علينا تصميم لغة ألف بشكل يكون بسبط للغاية وغير معقد، لذالك تم الاعتماد على لغة lua كمرجع للمعاير (**لغة الف4 ليست تعريب للغة lua**).
-
+لغة ألف صممت بشكل تجعل المبرمج يركز على فهم المشكلة وحلها (**البرنامج**) أكثر من  فهم اللغة نفسها (**لغة ألف**). و من اجل تحقيق هذا الهدف يجب علينا تصميم لغة ألف بشكل يكون بسيط للغاية وغير معقد.
 
 ## الشكل العام
 ### **\#الف**
@@ -49,17 +47,18 @@ tags: ["الدوال", "المتغيرات", "المقارنة"]
 #### **مثال**
 
 ```ألف
-اطبع(٣ == ٣)
-اطبع(٣ != ٣)
-اطبع(٣ >= ٣)
-اطبع(٣ <= ٣)
-اطبع(٣ > ٣)
-اطبع(٣ < ٣)
+إذا م == ج
+إذا م != ج
+إذا م >= ج
+إذا م <= ج
+إذا م > ج
+إذا م < ج
 ```
 
 ## المتغيرات
 ### **الشكل والقوانين**
-تحدثنا في الفقرات السابقة على أن منهج لغة ألف هو جعل الشيفرة بسيطة وسهلة قدر الامكان، بحيث نجعل المبرمج يركز على فهم المشكلة وحلها (**البرنامج**) اكثر من فهم اللغة نفسها (**لغة ألف**)، لهذا المتغيرات في لغة ألف هي عبارة عن كائن، نفس الشكل المتبع في لغات مثل بايثون وجافاسكربت وPHP. **لكن بقوانين لغة lua**
+تحدثنا في الفقرات السابقة على أن منهج لغة ألف هو جعل الشيفرة بسيطة وسهلة قدر الامكان، بحيث نجعل المبرمج يركز على فهم المشكلة وحلها (**البرنامج**) اكثر من فهم اللغة نفسها (**لغة ألف**)، لهذا المتغيرات في لغة ألف هي عبارة عن كائن، نفس الشكل المتبع في لغات مثل بايثون وجافاسكربت وPHP. **لكن بقوانين PHP فقط**
+شيفرة الكائن في هذا الملف : [alif_var.cpp](https://github.com/alifcommunity/compiler/blob/Alif_4/manual_test/alif_var_2.cpp)
 
 ### **مثال**
 #### **لغة جافاسكربت - النتيجة: نص 12**
@@ -101,12 +100,13 @@ echo ($c) // 3
 
 #### **لغة ألف4 - النتيجة: عدد 3**
 
-```ألف4
-أ = 1
-ب = "2"
-ت = أ + ب
-اطبع(ت) # 3
+```ألف
+متغير أ = 1
+متغير ب = "2"
+متغير ت = أ + ب
+اطبع(ت)
 ```
+كما نلاحظ **قوانين لغة ألف تشبه قوانين لغة PHP في ما يتعلق بالمتغيرات**، لكن الشكل يشبه بايثون الى حد ما.
 
 يمكن تقسيم المتغيرات في ألف4 الى نوعين متكيف، وغير متكيف
 
