--- a/alif_standards/المعايير/062622.md
+++ b/alif_standards/المعايير/062622.md
@@ -1,3 +1,10 @@
+---
+title: "المعيار رقم 062622"
+date: '2022/06/26'
+desc: 'المعيار الخاص بالأصناف والكائنات'
+tags: ["الأصناف", "الكائنات"]
+---
+
 <div dir="rtl">
 
 # معيار رقم 062622 الخاص بلغة البرمجة العربية ألف
@@ -8,111 +15,9 @@
 
 ---
 
-## تعريف بلغة ألف
-لغة ألف (**حرف أ**) هي لغة برمجة عربية مفتوحة المصدر كائنية، مصرفة، عالية المستوى، أسسها **حسن دراكة** في كندا سنة 2018، وحاليا يثم تطويرها من طرف **مجتمع ألف**، وهي متاحة للعامة تحت رخصة جنو العمومية الاصدار الثالث.
-
-
-## المنهج العام
-لغة ألف صممت بشكل تجعل المبرمج يركز على فهم المشكلة وحلها (**البرنامج**) أكثر من  فهم اللغة نفسها (**لغة ألف**). و من اجل تحقيق هذا الهدف يجب علينا تصميم لغة ألف بشكل يكون بسيط للغاية وغير معقد.
-
-
-## الشكل العام
-### **\#الف**
-ملف شيفرة ألف يبدأ ب **\#ألف**، وهذا يساعد اي مبرمج على التعرف وبشكل فوري على ان هذا النص هو شيفرة لغة ألف.
-<br>كذالك يتجنب المترجم قراءة وترجمة اي ملف لا يبدأ ب **\#ألف**.
-
-### **نهاية السطر**
-<!-- > هي **`\n`** وليست **`n\`** تم كتابتها هكذ ليسهل قرائتها -->
-
-أوامر لغة ألف تنتهي بنهاية السطر **`n\`** وليس **`؛`** مثلا. 
-
-### **المقارنة**
-يتم المقارنة بين المتغيرات او تعبير حسابي باستخدام الرموز التالية
-
-<div dir="rtl">
-
-| الرمز | وظيفته |
-|:---:|:---:|
-| ==  |تستخدم للتعبير عن تساوي متغيرين|
-| !=  |تستخدم للتعبير عن عدم تساوي متغيرين|
-|  >= |تستخدم للتعبير عن اكبر من او يساوي|
-| <=  |تستخدم للتعبير عن اصغر من او يساوي|
-|  >  |تستخدم للتعبير عن اكبر من|
-|  <  |تستخدم للتعبير عن اصغر من|
-
-
-#### **مثال**
-
-```ألف
-إذا م == ج
-إذا م != ج
-إذا م >= ج
-إذا م <= ج
-إذا م > ج
-إذا م < ج
-
-```
-
-</div>
-
-## المتغيرات
-### **الشكل والقوانين**
-تحدثنا في الفقرات السابقة على أن منهج لغة ألف هو جعل الشيفرة بسيطة وسهلة قدر الامكان، بحيث نجعل المبرمج يركز على فهم المشكلة وحلها (**البرنامج**) اكثر من فهم اللغة نفسها (**لغة ألف**)، لهذا المتغيرات في لغة ألف هي عبارة عن كائن، نفس الشكل المتبع في لغات مثل بايثون وجافاسكربت وPHP. **لكن بقوانين PHP فقط**
-شيفرة الكائن في هذا الملف : [alif_var.cpp](https://github.com/alifcommunity/compiler/blob/Alif_4/manual_test/alif_var_2.cpp)
-
-### **مثال**
-#### **لغة جافاسكربت - النتيجة: نص 12**
-
-```js
-let a = 1;
-let b = "2";
-let c = a + b;
-console.log(c) // "12"
-```
-
-#### **لغة بايثون - النتيجة: خطأ**
-
-```python
-a = 1
-b = "2"
-c = a + b # خطأ
-print(c)
-```
-
-#### **لغة PHP - النتيجة: عدد 3**
-```php
-$a = 1;
-$b = "2";
-$c = $a + $b;
-echo ($c) // 3
-```
-
-#### **لغة ألف - النتيجة: عدد 3**
-<div dir="rtl">
-
-```ألف
-متغير أ = 1
-متغير ب = "2"
-متغير ت = أ + ب
-اطبع(ت)
-```
-
-</div>
-
-
-كما نلاحظ **قوانين لغة ألف تشبه قوانين لغة PHP في ما يتعلق بالمتغيرات**، لكن الشكل يشبه بايثون الى حد ما.
-
-## الدوال
-### **الشكل والقوانين**
-تٌعرَّف الدوال باستخدام الكلمة المفتاحية **`دالة`**
-
 ## الأصناف
 
     # ألف
-    # أضف "ملف_ما"
-    # مكتبة "الواجهة"
-    
-    // تعليق أوحادي السطر
     
     صنف شخص 
          
